v1.0.0/modules/schema/pages/class/GovCT1.adoc
= `GovCT1`
:toclevels: 4


+++General model for any prime mover with a PID governor, used primarily for combustion turbine and combined cycle units.
This model can be used to represent a variety of prime movers controlled by PID governors.  It is suitable, for example, for the representation of: 
<ul>
	<li>gas turbine and single shaft combined cycle turbines</li>
</ul>
<ul>
	<li>diesel engines with modern electronic or digital governors  </li>
</ul>
<ul>
	<li>steam turbines where steam is supplied from a large boiler drum or a large header whose pressure is substantially constant over the period under study</li>
	<li>simple hydro turbines in dam configurations where the water column length is short and water inertia effects are minimal.</li>
</ul>
Additional information on this model is available in the 2012 IEEE report, <i><u>Dynamic Models for Turbine-Governors in Power System Studies</u></i>, 3.1.2.3 pages 3-4 (GGOV1).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GovCT1`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
**** *`GovCT1`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
GovCT1 {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}































































AsynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TurbineLoadControllerDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



SynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}


































GovCT1 -> AsynchronousMachineDynamics: AsynchronousMachineDynamics


GovCT1 -> TurbineLoadControllerDynamics: TurbineLoadControllerDynamics


GovCT1 -> SynchronousMachineDynamics: SynchronousMachineDynamics


GovCT1 -> DiagramObject: DiagramObjects


GovCT1 -> InstanceSet: InstanceSet


GovCT1 -> Name: Names


GovCT1 -> ChangeSetMember: PropertiesCIMDataObject


GovCT1 -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<aset,`aset`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Acceleration limiter setpoint (<i>Aset</i>).  Unit = PU / s.  Typical value = 0,01.+++

| <<db,`db`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Speed governor deadband in PU speed (<i>db</i>).  In the majority of applications, it is recommended that this value be set to zero.  Typical value = 0.+++

| <<dm,`dm`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Speed sensitivity coefficient (<i>Dm</i>).  <i>Dm</i> can represent either the variation of the engine power with the shaft speed or the variation of maximum power capability with shaft speed.  If it is positive it describes the falling slope of the engine speed verses power characteristic as speed increases. A slightly falling characteristic is typical for reciprocating engines and some aero-derivative turbines.  If it is negative the engine power is assumed to be unaffected by the shaft speed, but the maximum permissible fuel flow is taken to fall with falling shaft speed. This is characteristic of single-shaft industrial turbines due to exhaust temperature limits.  Typical value = 0.+++

| <<ka,`ka`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Acceleration limiter gain (<i>Ka</i>).  Typical value = 10.+++

| <<kdgov,`kdgov`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Governor derivative gain (<i>Kdgov</i>).  Typical value = 0.+++

| <<kigov,`kigov`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Governor integral gain (<i>Kigov</i>).  Typical value = 2.+++

| <<kiload,`kiload`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Load limiter integral gain for PI controller (<i>Kiload</i>).  Typical value = 0,67.+++

| <<kimw,`kimw`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Power controller (reset) gain (<i>Kimw</i>).  The default value of 0,01 corresponds to a reset time of 100 s.  A value of 0,001 corresponds to a relatively slow-acting load controller.  Typical value = 0,01.+++

| <<kpgov,`kpgov`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Governor proportional gain (<i>Kpgov</i>).  Typical value = 10.+++

| <<kpload,`kpload`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Load limiter proportional gain for PI controller (<i>Kpload</i>).  Typical value = 2.+++

| <<kturb,`kturb`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Turbine gain (<i>Kturb</i>) (&gt; 0).  Typical value = 1,5.+++

| <<ldref,`ldref`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Load limiter reference value (<i>Ldref</i>).  Typical value = 1.+++

| <<maxerr,`maxerr`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum value for speed error signal (<i>maxerr</i>) (&gt; GovCT1.minerr).  Typical value = 0,05.+++

| <<minerr,`minerr`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum value for speed error signal (<i>minerr</i>) (&lt; GovCT1.maxerr).  Typical value = -0,05.+++

| <<mwbase,`mwbase`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++

| <<r,`r`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Permanent droop (<i>R</i>).  Typical value = 0,04.+++

| <<rclose,`rclose`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Minimum valve closing rate (<i>Rclose</i>).  Unit = PU / s.  Typical value = -0,1.+++

| <<rdown,`rdown`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum rate of load limit decrease (<i>Rdown</i>).  Typical value = -99.+++

| <<ropen,`ropen`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Maximum valve opening rate (<i>Ropen</i>).  Unit = PU / s.  Typical value = 0.10.+++

| <<rselect,`rselect`>>
| 0..1
| xref::enumeration/DroopSignalFeedbackKind.adoc[`DroopSignalFeedbackKind`]
| +++Feedback signal for droop (<i>Rselect</i>).  Typical value = electricalPower.+++

| <<rup,`rup`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum rate of load limit increase (<i>Rup</i>).  Typical value = 99.+++

| <<ta,`ta`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Acceleration limiter time constant (<i>Ta</i>) (&gt; 0).  Typical value = 0,1.+++

| <<tact,`tact`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Actuator time constant (<i>Tact</i>) (&gt;= 0).  Typical value = 0,5.+++

| <<tb,`tb`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Turbine lag time constant (<i>Tb</i>) (&gt; 0).  Typical value = 0,5.+++

| <<tc,`tc`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Turbine lead time constant (<i>Tc</i>) (&gt;= 0).  Typical value = 0.+++

| <<tdgov,`tdgov`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Governor derivative controller time constant (<i>Tdgov</i>) (&gt;= 0).  Typical value = 1.+++

| <<teng,`teng`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Transport time delay for diesel engine used in representing diesel engines where there is a small but measurable transport delay between a change in fuel flow setting and the development of torque (<i>Teng</i>) (&gt;= 0).  <i>Teng</i> should be zero in all but special cases where this transport delay is of particular concern.  Typical value = 0.+++

| <<tfload,`tfload`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Load-limiter time constant (<i>Tfload</i>) (&gt; 0).  Typical value = 3.+++

| <<tpelec,`tpelec`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Electrical power transducer time constant (<i>Tpelec</i>) (&gt; 0).  Typical value = 1.+++

| <<tsa,`tsa`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Temperature detection lead time constant (<i>Tsa</i>) (&gt;= 0).  Typical value = 4.+++

| <<tsb,`tsb`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Temperature detection lag time constant (<i>Tsb</i>) (&gt;= 0).  Typical value = 5.+++

| <<vmax,`vmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum valve position limit (<i>Vmax</i>) (&gt; GovCT1.vmin).  Typical value = 1.+++

| <<vmin,`vmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum valve position limit (<i>Vmin</i>) (&lt; GovCT1.vmax).  Typical value = 0,15.+++

| <<wfnl,`wfnl`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++No load fuel flow (<i>Wfnl</i>).  Typical value = 0,2.+++

| <<wfspd,`wfspd`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Switch for fuel source characteristic to recognize that fuel flow, for a given fuel valve stroke, can be proportional to engine speed (<i>Wfspd</i>).
true = fuel flow proportional to speed (for some gas turbines and diesel engines with positive displacement fuel injectors)
false = fuel control system keeps fuel flow independent of engine speed.
Typical value = true.+++

| <<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
| 0..1
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]
| +++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 0..1
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

| <<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
| 0..1
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]
| +++Turbine load controller providing input to this turbine-governor.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#aset]
=== `aset`
+++Acceleration limiter setpoint (<i>Aset</i>).  Unit = PU / s.  Typical value = 0,01.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.aset`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#AsynchronousMachineDynamics]
=== `AsynchronousMachineDynamics`
+++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.AsynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#db]
=== `db`
+++Speed governor deadband in PU speed (<i>db</i>).  In the majority of applications, it is recommended that this value be set to zero.  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.db`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#dm]
=== `dm`
+++Speed sensitivity coefficient (<i>Dm</i>).  <i>Dm</i> can represent either the variation of the engine power with the shaft speed or the variation of maximum power capability with shaft speed.  If it is positive it describes the falling slope of the engine speed verses power characteristic as speed increases. A slightly falling characteristic is typical for reciprocating engines and some aero-derivative turbines.  If it is negative the engine power is assumed to be unaffected by the shaft speed, but the maximum permissible fuel flow is taken to fall with falling shaft speed. This is characteristic of single-shaft industrial turbines due to exhaust temperature limits.  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.dm`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ka]
=== `ka`
+++Acceleration limiter gain (<i>Ka</i>).  Typical value = 10.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.ka`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kdgov]
=== `kdgov`
+++Governor derivative gain (<i>Kdgov</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.kdgov`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kigov]
=== `kigov`
+++Governor integral gain (<i>Kigov</i>).  Typical value = 2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.kigov`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kiload]
=== `kiload`
+++Load limiter integral gain for PI controller (<i>Kiload</i>).  Typical value = 0,67.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.kiload`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kimw]
=== `kimw`
+++Power controller (reset) gain (<i>Kimw</i>).  The default value of 0,01 corresponds to a reset time of 100 s.  A value of 0,001 corresponds to a relatively slow-acting load controller.  Typical value = 0,01.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.kimw`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kpgov]
=== `kpgov`
+++Governor proportional gain (<i>Kpgov</i>).  Typical value = 10.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.kpgov`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kpload]
=== `kpload`
+++Load limiter proportional gain for PI controller (<i>Kpload</i>).  Typical value = 2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.kpload`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kturb]
=== `kturb`
+++Turbine gain (<i>Kturb</i>) (&gt; 0).  Typical value = 1,5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.kturb`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#ldref]
=== `ldref`
+++Load limiter reference value (<i>Ldref</i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.ldref`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#maxerr]
=== `maxerr`
+++Maximum value for speed error signal (<i>maxerr</i>) (&gt; GovCT1.minerr).  Typical value = 0,05.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.maxerr`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#minerr]
=== `minerr`
+++Minimum value for speed error signal (<i>minerr</i>) (&lt; GovCT1.maxerr).  Typical value = -0,05.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.minerr`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mwbase]
=== `mwbase`
+++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.mwbase`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#r]
=== `r`
+++Permanent droop (<i>R</i>).  Typical value = 0,04.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.r`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#rclose]
=== `rclose`
+++Minimum valve closing rate (<i>Rclose</i>).  Unit = PU / s.  Typical value = -0,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.rclose`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#rdown]
=== `rdown`
+++Maximum rate of load limit decrease (<i>Rdown</i>).  Typical value = -99.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.rdown`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#ropen]
=== `ropen`
+++Maximum valve opening rate (<i>Ropen</i>).  Unit = PU / s.  Typical value = 0.10.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.ropen`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#rselect]
=== `rselect`
+++Feedback signal for droop (<i>Rselect</i>).  Typical value = electricalPower.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.rselect`
| Cardinality
| 0..1
| Type
| xref::enumeration/DroopSignalFeedbackKind.adoc[`DroopSignalFeedbackKind`]


|===

//[discrete]
[#rup]
=== `rup`
+++Maximum rate of load limit increase (<i>Rup</i>).  Typical value = 99.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.rup`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.SynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#ta]
=== `ta`
+++Acceleration limiter time constant (<i>Ta</i>) (&gt; 0).  Typical value = 0,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.ta`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tact]
=== `tact`
+++Actuator time constant (<i>Tact</i>) (&gt;= 0).  Typical value = 0,5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.tact`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#tb]
=== `tb`
+++Turbine lag time constant (<i>Tb</i>) (&gt; 0).  Typical value = 0,5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.tb`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tc]
=== `tc`
+++Turbine lead time constant (<i>Tc</i>) (&gt;= 0).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.tc`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tdgov]
=== `tdgov`
+++Governor derivative controller time constant (<i>Tdgov</i>) (&gt;= 0).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.tdgov`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#teng]
=== `teng`
+++Transport time delay for diesel engine used in representing diesel engines where there is a small but measurable transport delay between a change in fuel flow setting and the development of torque (<i>Teng</i>) (&gt;= 0).  <i>Teng</i> should be zero in all but special cases where this transport delay is of particular concern.  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.teng`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tfload]
=== `tfload`
+++Load-limiter time constant (<i>Tfload</i>) (&gt; 0).  Typical value = 3.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.tfload`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tpelec]
=== `tpelec`
+++Electrical power transducer time constant (<i>Tpelec</i>) (&gt; 0).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.tpelec`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tsa]
=== `tsa`
+++Temperature detection lead time constant (<i>Tsa</i>) (&gt;= 0).  Typical value = 4.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.tsa`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tsb]
=== `tsb`
+++Temperature detection lag time constant (<i>Tsb</i>) (&gt;= 0).  Typical value = 5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.tsb`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#TurbineLoadControllerDynamics]
=== `TurbineLoadControllerDynamics`
+++Turbine load controller providing input to this turbine-governor.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.TurbineLoadControllerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#vmax]
=== `vmax`
+++Maximum valve position limit (<i>Vmax</i>) (&gt; GovCT1.vmin).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.vmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vmin]
=== `vmin`
+++Minimum valve position limit (<i>Vmin</i>) (&lt; GovCT1.vmax).  Typical value = 0,15.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.vmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#wfnl]
=== `wfnl`
+++No load fuel flow (<i>Wfnl</i>).  Typical value = 0,2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.wfnl`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#wfspd]
=== `wfspd`
+++Switch for fuel source characteristic to recognize that fuel flow, for a given fuel valve stroke, can be proportional to engine speed (<i>Wfspd</i>).
true = fuel flow proportional to speed (for some gas turbines and diesel engines with positive displacement fuel injectors)
false = fuel control system keeps fuel flow independent of engine speed.
Typical value = true.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.wfspd`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===


