v1.1.0/modules/schema/pages/class/GovCT1.adoc
= `GovCT1`
:toclevels: 4


+++General model for any prime mover with a PID governor, used primarily for combustion turbine and combined cycle units.
This model can be used to represent a variety of prime movers controlled by PID governors.  It is suitable, for example, for the representation of: 
<ul>
	<li>gas turbine and single shaft combined cycle turbines</li>
</ul>
<ul>
	<li>diesel engines with modern electronic or digital governors  </li>
</ul>
<ul>
	<li>steam turbines where steam is supplied from a large boiler drum or a large header whose pressure is substantially constant over the period under study</li>
	<li>simple hydro turbines in dam configurations where the water column length is short and water inertia effects are minimal.</li>
</ul>
Additional information on this model is available in the 2012 IEEE report, <i><u>Dynamic Models for Turbine-Governors in Power System Studies</u></i>, 3.1.2.3 pages 3-4 (GGOV1).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GovCT1`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
**** *`GovCT1`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<aset,`aset`>>
//| [[slots_table.aset]]<<aset,`aset`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Acceleration limiter setpoint (<i>Aset</i>).  Unit = PU / s.  Typical value = 0,01.+++
| _n/a_

| <<db,`db`>>
//| [[slots_table.db]]<<db,`db`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Speed governor deadband in PU speed (<i>db</i>).  In the majority of applications, it is recommended that this value be set...+++
| _n/a_

| <<dm,`dm`>>
//| [[slots_table.dm]]<<dm,`dm`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Speed sensitivity coefficient (<i>Dm</i>).  <i>Dm</i> can represent either the variation of the engine power with the shaft...+++
| _n/a_

| <<ka,`ka`>>
//| [[slots_table.ka]]<<ka,`ka`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Acceleration limiter gain (<i>Ka</i>).  Typical value = 10.+++
| _n/a_

| <<kdgov,`kdgov`>>
//| [[slots_table.kdgov]]<<kdgov,`kdgov`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Governor derivative gain (<i>Kdgov</i>).  Typical value = 0.+++
| _n/a_

| <<kigov,`kigov`>>
//| [[slots_table.kigov]]<<kigov,`kigov`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Governor integral gain (<i>Kigov</i>).  Typical value = 2.+++
| _n/a_

| <<kiload,`kiload`>>
//| [[slots_table.kiload]]<<kiload,`kiload`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Load limiter integral gain for PI controller (<i>Kiload</i>).  Typical value = 0,67.+++
| _n/a_

| <<kimw,`kimw`>>
//| [[slots_table.kimw]]<<kimw,`kimw`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Power controller (reset) gain (<i>Kimw</i>).  The default value of 0,01 corresponds to a reset time of 100 s.  A value of...+++
| _n/a_

| <<kpgov,`kpgov`>>
//| [[slots_table.kpgov]]<<kpgov,`kpgov`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Governor proportional gain (<i>Kpgov</i>).  Typical value = 10.+++
| _n/a_

| <<kpload,`kpload`>>
//| [[slots_table.kpload]]<<kpload,`kpload`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Load limiter proportional gain for PI controller (<i>Kpload</i>).  Typical value = 2.+++
| _n/a_

| <<kturb,`kturb`>>
//| [[slots_table.kturb]]<<kturb,`kturb`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Turbine gain (<i>Kturb</i>) (&gt; 0).  Typical value = 1,5.+++
| _n/a_

| <<ldref,`ldref`>>
//| [[slots_table.ldref]]<<ldref,`ldref`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Load limiter reference value (<i>Ldref</i>).  Typical value = 1.+++
| _n/a_

| <<maxerr,`maxerr`>>
//| [[slots_table.maxerr]]<<maxerr,`maxerr`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum value for speed error signal (<i>maxerr</i>) (&gt; GovCT1.minerr).  Typical value = 0,05.+++
| _n/a_

| <<minerr,`minerr`>>
//| [[slots_table.minerr]]<<minerr,`minerr`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum value for speed error signal (<i>minerr</i>) (&lt; GovCT1.maxerr).  Typical value = -0,05.+++
| _n/a_

| <<mwbase,`mwbase`>>
//| [[slots_table.mwbase]]<<mwbase,`mwbase`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++
| _n/a_

| <<r,`r`>>
//| [[slots_table.r]]<<r,`r`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Permanent droop (<i>R</i>).  Typical value = 0,04.+++
| _n/a_

| <<rclose,`rclose`>>
//| [[slots_table.rclose]]<<rclose,`rclose`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Minimum valve closing rate (<i>Rclose</i>).  Unit = PU / s.  Typical value = -0,1.+++
| _n/a_

| <<rdown,`rdown`>>
//| [[slots_table.rdown]]<<rdown,`rdown`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum rate of load limit decrease (<i>Rdown</i>).  Typical value = -99.+++
| _n/a_

| <<ropen,`ropen`>>
//| [[slots_table.ropen]]<<ropen,`ropen`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Maximum valve opening rate (<i>Ropen</i>).  Unit = PU / s.  Typical value = 0.10.+++
| _n/a_

| <<rselect,`rselect`>>
//| [[slots_table.rselect]]<<rselect,`rselect`>>
| 0..1 +
xref::enumeration/DroopSignalFeedbackKind.adoc[`DroopSignalFeedbackKind`]
| +++Feedback signal for droop (<i>Rselect</i>).  Typical value = electricalPower.+++
| _n/a_

| <<rup,`rup`>>
//| [[slots_table.rup]]<<rup,`rup`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum rate of load limit increase (<i>Rup</i>).  Typical value = 99.+++
| _n/a_

| <<ta,`ta`>>
//| [[slots_table.ta]]<<ta,`ta`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Acceleration limiter time constant (<i>Ta</i>) (&gt; 0).  Typical value = 0,1.+++
| _n/a_

| <<tact,`tact`>>
//| [[slots_table.tact]]<<tact,`tact`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Actuator time constant (<i>Tact</i>) (&gt;= 0).  Typical value = 0,5.+++
| _n/a_

| <<tb,`tb`>>
//| [[slots_table.tb]]<<tb,`tb`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Turbine lag time constant (<i>Tb</i>) (&gt; 0).  Typical value = 0,5.+++
| _n/a_

| <<tc,`tc`>>
//| [[slots_table.tc]]<<tc,`tc`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Turbine lead time constant (<i>Tc</i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<tdgov,`tdgov`>>
//| [[slots_table.tdgov]]<<tdgov,`tdgov`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Governor derivative controller time constant (<i>Tdgov</i>) (&gt;= 0).  Typical value = 1.+++
| _n/a_

| <<teng,`teng`>>
//| [[slots_table.teng]]<<teng,`teng`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Transport time delay for diesel engine used in representing diesel engines where there is a small but measurable transport...+++
| _n/a_

| <<tfload,`tfload`>>
//| [[slots_table.tfload]]<<tfload,`tfload`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Load-limiter time constant (<i>Tfload</i>) (&gt; 0).  Typical value = 3.+++
| _n/a_

| <<tpelec,`tpelec`>>
//| [[slots_table.tpelec]]<<tpelec,`tpelec`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Electrical power transducer time constant (<i>Tpelec</i>) (&gt; 0).  Typical value = 1.+++
| _n/a_

| <<tsa,`tsa`>>
//| [[slots_table.tsa]]<<tsa,`tsa`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Temperature detection lead time constant (<i>Tsa</i>) (&gt;= 0).  Typical value = 4.+++
| _n/a_

| <<tsb,`tsb`>>
//| [[slots_table.tsb]]<<tsb,`tsb`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Temperature detection lag time constant (<i>Tsb</i>) (&gt;= 0).  Typical value = 5.+++
| _n/a_

| <<vmax,`vmax`>>
//| [[slots_table.vmax]]<<vmax,`vmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum valve position limit (<i>Vmax</i>) (&gt; GovCT1.vmin).  Typical value = 1.+++
| _n/a_

| <<vmin,`vmin`>>
//| [[slots_table.vmin]]<<vmin,`vmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum valve position limit (<i>Vmin</i>) (&lt; GovCT1.vmax).  Typical value = 0,15.+++
| _n/a_

| <<wfnl,`wfnl`>>
//| [[slots_table.wfnl]]<<wfnl,`wfnl`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++No load fuel flow (<i>Wfnl</i>).  Typical value = 0,2.+++
| _n/a_

| <<wfspd,`wfspd`>>
//| [[slots_table.wfspd]]<<wfspd,`wfspd`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Switch for fuel source characteristic to recognize that fuel flow, for a given fuel valve stroke, can be proportional to...+++
| _n/a_

| <<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
//| [[slots_table.AsynchronousMachineDynamics]]<<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
| 0..1 +
xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]
| +++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either...+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
//| [[slots_table.SynchronousMachineDynamics]]<<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 0..1 +
xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an...+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
//| [[slots_table.TurbineLoadControllerDynamics]]<<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
| 0..1 +
xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]
| +++Turbine load controller providing input to this turbine-governor.+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#aset]
=== `aset`
+++Acceleration limiter setpoint (<i>Aset</i>).  Unit = PU / s.  Typical value = 0,01.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.aset`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.aset,&#10548;>>
--
////


//[discrete]
[#AsynchronousMachineDynamics]
=== `AsynchronousMachineDynamics`
+++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.AsynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.AsynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#db]
=== `db`
+++Speed governor deadband in PU speed (<i>db</i>).  In the majority of applications, it is recommended that this value be set to zero.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.db`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.db,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#dm]
=== `dm`
+++Speed sensitivity coefficient (<i>Dm</i>).  <i>Dm</i> can represent either the variation of the engine power with the shaft speed or the variation of maximum power capability with shaft speed.  If it is positive it describes the falling slope of the engine speed verses power characteristic as speed increases. A slightly falling characteristic is typical for reciprocating engines and some aero-derivative turbines.  If it is negative the engine power is assumed to be unaffected by the shaft speed, but the maximum permissible fuel flow is taken to fall with falling shaft speed. This is characteristic of single-shaft industrial turbines due to exhaust temperature limits.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.dm`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.dm,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#ka]
=== `ka`
+++Acceleration limiter gain (<i>Ka</i>).  Typical value = 10.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.ka`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ka,&#10548;>>
--
////


//[discrete]
[#kdgov]
=== `kdgov`
+++Governor derivative gain (<i>Kdgov</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.kdgov`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kdgov,&#10548;>>
--
////


//[discrete]
[#kigov]
=== `kigov`
+++Governor integral gain (<i>Kigov</i>).  Typical value = 2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.kigov`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kigov,&#10548;>>
--
////


//[discrete]
[#kiload]
=== `kiload`
+++Load limiter integral gain for PI controller (<i>Kiload</i>).  Typical value = 0,67.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.kiload`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kiload,&#10548;>>
--
////


//[discrete]
[#kimw]
=== `kimw`
+++Power controller (reset) gain (<i>Kimw</i>).  The default value of 0,01 corresponds to a reset time of 100 s.  A value of 0,001 corresponds to a relatively slow-acting load controller.  Typical value = 0,01.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.kimw`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kimw,&#10548;>>
--
////


//[discrete]
[#kpgov]
=== `kpgov`
+++Governor proportional gain (<i>Kpgov</i>).  Typical value = 10.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.kpgov`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kpgov,&#10548;>>
--
////


//[discrete]
[#kpload]
=== `kpload`
+++Load limiter proportional gain for PI controller (<i>Kpload</i>).  Typical value = 2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.kpload`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kpload,&#10548;>>
--
////


//[discrete]
[#kturb]
=== `kturb`
+++Turbine gain (<i>Kturb</i>) (&gt; 0).  Typical value = 1,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.kturb`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kturb,&#10548;>>
--
////


//[discrete]
[#ldref]
=== `ldref`
+++Load limiter reference value (<i>Ldref</i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.ldref`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ldref,&#10548;>>
--
////


//[discrete]
[#maxerr]
=== `maxerr`
+++Maximum value for speed error signal (<i>maxerr</i>) (&gt; GovCT1.minerr).  Typical value = 0,05.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.maxerr`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.maxerr,&#10548;>>
--
////


//[discrete]
[#minerr]
=== `minerr`
+++Minimum value for speed error signal (<i>minerr</i>) (&lt; GovCT1.maxerr).  Typical value = -0,05.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.minerr`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.minerr,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#mwbase]
=== `mwbase`
+++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.mwbase`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.mwbase,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#r]
=== `r`
+++Permanent droop (<i>R</i>).  Typical value = 0,04.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.r`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.r,&#10548;>>
--
////


//[discrete]
[#rclose]
=== `rclose`
+++Minimum valve closing rate (<i>Rclose</i>).  Unit = PU / s.  Typical value = -0,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.rclose`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.rclose,&#10548;>>
--
////


//[discrete]
[#rdown]
=== `rdown`
+++Maximum rate of load limit decrease (<i>Rdown</i>).  Typical value = -99.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.rdown`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.rdown,&#10548;>>
--
////


//[discrete]
[#ropen]
=== `ropen`
+++Maximum valve opening rate (<i>Ropen</i>).  Unit = PU / s.  Typical value = 0.10.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.ropen`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.ropen,&#10548;>>
--
////


//[discrete]
[#rselect]
=== `rselect`
+++Feedback signal for droop (<i>Rselect</i>).  Typical value = electricalPower.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.rselect`
| Cardinality
| 0..1
| Type
| xref::enumeration/DroopSignalFeedbackKind.adoc[`DroopSignalFeedbackKind`]


|===

////
[.text-left]
--
<<slots_table.rselect,&#10548;>>
--
////


//[discrete]
[#rup]
=== `rup`
+++Maximum rate of load limit increase (<i>Rup</i>).  Typical value = 99.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.rup`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.rup,&#10548;>>
--
////


//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.SynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.SynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#ta]
=== `ta`
+++Acceleration limiter time constant (<i>Ta</i>) (&gt; 0).  Typical value = 0,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.ta`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.ta,&#10548;>>
--
////


//[discrete]
[#tact]
=== `tact`
+++Actuator time constant (<i>Tact</i>) (&gt;= 0).  Typical value = 0,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.tact`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tact,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tb]
=== `tb`
+++Turbine lag time constant (<i>Tb</i>) (&gt; 0).  Typical value = 0,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.tb`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tb,&#10548;>>
--
////


//[discrete]
[#tc]
=== `tc`
+++Turbine lead time constant (<i>Tc</i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.tc`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tc,&#10548;>>
--
////


//[discrete]
[#tdgov]
=== `tdgov`
+++Governor derivative controller time constant (<i>Tdgov</i>) (&gt;= 0).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.tdgov`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tdgov,&#10548;>>
--
////


//[discrete]
[#teng]
=== `teng`
+++Transport time delay for diesel engine used in representing diesel engines where there is a small but measurable transport delay between a change in fuel flow setting and the development of torque (<i>Teng</i>) (&gt;= 0).  <i>Teng</i> should be zero in all but special cases where this transport delay is of particular concern.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.teng`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.teng,&#10548;>>
--
////


//[discrete]
[#tfload]
=== `tfload`
+++Load-limiter time constant (<i>Tfload</i>) (&gt; 0).  Typical value = 3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.tfload`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tfload,&#10548;>>
--
////


//[discrete]
[#tpelec]
=== `tpelec`
+++Electrical power transducer time constant (<i>Tpelec</i>) (&gt; 0).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.tpelec`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tpelec,&#10548;>>
--
////


//[discrete]
[#tsa]
=== `tsa`
+++Temperature detection lead time constant (<i>Tsa</i>) (&gt;= 0).  Typical value = 4.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.tsa`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tsa,&#10548;>>
--
////


//[discrete]
[#tsb]
=== `tsb`
+++Temperature detection lag time constant (<i>Tsb</i>) (&gt;= 0).  Typical value = 5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.tsb`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tsb,&#10548;>>
--
////


//[discrete]
[#TurbineLoadControllerDynamics]
=== `TurbineLoadControllerDynamics`
+++Turbine load controller providing input to this turbine-governor.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.TurbineLoadControllerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.TurbineLoadControllerDynamics,&#10548;>>
--
////


//[discrete]
[#vmax]
=== `vmax`
+++Maximum valve position limit (<i>Vmax</i>) (&gt; GovCT1.vmin).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.vmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vmax,&#10548;>>
--
////


//[discrete]
[#vmin]
=== `vmin`
+++Minimum valve position limit (<i>Vmin</i>) (&lt; GovCT1.vmax).  Typical value = 0,15.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.vmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vmin,&#10548;>>
--
////


//[discrete]
[#wfnl]
=== `wfnl`
+++No load fuel flow (<i>Wfnl</i>).  Typical value = 0,2.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.wfnl`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.wfnl,&#10548;>>
--
////


//[discrete]
[#wfspd]
=== `wfspd`
+++Switch for fuel source characteristic to recognize that fuel flow, for a given fuel valve stroke, can be proportional to engine speed (<i>Wfspd</i>).
true = fuel flow proportional to speed (for some gas turbines and diesel engines with positive displacement fuel injectors)
false = fuel control system keeps fuel flow independent of engine speed.
Typical value = true.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT1.wfspd`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.wfspd,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
